feat(06-01): add CSS for hero-category label
- Add .hero-category class with badge-style treatment
- Use purple-100 background with purple-700 text
- Uppercase styling with letter-spacing for visual hierarchy
- Consistent with site design system (border, border-radius)

--- a/index.html
+++ b/index.html
@@ -692,6 +692,21 @@
 
         .hero-badge::before { content: '✨'; margin-right: 4px; }
 
+        .hero-category {
+            display: inline-block;
+            background: var(--purple-100);
+            color: var(--purple-700);
+            padding: 8px 16px;
+            border-radius: 100px;
+            font-family: var(--font-display);
+            font-size: 0.85rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            margin-bottom: 20px;
+            border: 1px solid var(--purple-200);
+        }
+
         .hero h1 {
             font-size: clamp(2.8rem, 6vw, 4.5rem);
             color: var(--gray-900);
