feat(06-02): add CSS for hero portal mockup (desktop + mobile)
Desktop styles:
- Dark background (gray-900) with macOS-style window dots
- Score display with large value and status badge
- Topic breakdown rows with color-coded scores (green/yellow/red)
- Weak topics section with red tint and tags

Mobile styles (< 768px):
- Reduced padding for compact display
- Smaller score value font size
- Stacked weak topic tags vertically
- Smaller row text for better fit

--- a/index.html
+++ b/index.html
@@ -3353,6 +3353,36 @@
 
             .faq-question { padding: 18px 20px; font-size: 1rem; }
             .faq-answer { padding: 0 20px 18px; padding-top: 14px; }
+
+            /* Hero portal mockup mobile adjustments */
+            .hero-portal-mockup {
+                margin-top: 32px;
+            }
+
+            .hero-mockup-header {
+                padding: 12px 16px;
+            }
+
+            .hero-mockup-content {
+                padding: 16px;
+            }
+
+            .score-value {
+                font-size: 2rem;
+            }
+
+            .hero-mockup-row {
+                font-size: 0.85rem;
+                padding: 8px 0;
+            }
+
+            .hero-mockup-tags {
+                flex-direction: column;
+            }
+
+            .weak-tag {
+                font-size: 0.75rem;
+            }
         }
 
         /* Professional Icon Styling */
