fix(06-01): update hero headline and subheadline copy

--- a/index.html
+++ b/index.html
@@ -4657,10 +4657,9 @@
                 <div class="hero-content">
                     <div class="hero-text">
                         <div class="hero-category">HSC Tutoring</div>
-                        <h1>We Show You Exactly Where <span>They're Struggling</span></h1>
+                        <h1>Tutoring That Adapts to <span>Their Weak Spots</span></h1>
                         <p class="hero-description">
-                            Our portal tracks your child's scores topic by topic, so we know exactly where they need help.
-                            Every week, they get custom worksheets targeting their weak spots - not generic homework.
+                            We track scores topic by topic. Their worksheets target exactly what they need to improve.
                         </p>
                         <div class="hero-buttons">
                             <a href="#contact" class="btn btn-primary">Book Free Trial</a>
