feat(07-01): add proof section HTML structure
- Add proof section between hero and about sections
- Create document grid with 4 card containers
- Add 'Yours to Keep' badge and topic gap callout
- Structure follows existing section patterns

--- a/index.html
+++ b/index.html
@@ -4716,6 +4716,68 @@
             </div>
         </section>
 
+        <!-- Proof Section -->
+        <section class="proof-section" id="proof" aria-labelledby="proof-title">
+            <div class="container">
+                <header class="section-header">
+                    <div class="proof-badge">From ONE Free Trial - Yours to Keep</div>
+                    <h2 class="section-title" id="proof-title">See Exactly Where They're Struggling</h2>
+                    <p class="section-description">Your diagnostic produces 4 custom documents. Keep them even if you don't enrol.</p>
+                </header>
+
+                <div class="documents-grid">
+                    <!-- Progress Report - Top Left (most visual) -->
+                    <div class="document-card document-dashboard">
+                        <div class="document-preview" aria-hidden="true">
+                            <!-- Dashboard mockup placeholder -->
+                        </div>
+                        <div class="document-info">
+                            <h3 class="document-name">Progress Report</h3>
+                            <p class="document-desc">Topic-by-topic breakdown showing exactly which areas need work</p>
+                        </div>
+                    </div>
+
+                    <!-- Diagnostic Worksheet - Top Right -->
+                    <div class="document-card document-paper">
+                        <div class="document-preview" aria-hidden="true">
+                            <!-- Paper mockup placeholder -->
+                        </div>
+                        <div class="document-info">
+                            <h3 class="document-name">Diagnostic Worksheet</h3>
+                            <p class="document-desc">20 targeted questions covering key syllabus topics</p>
+                        </div>
+                    </div>
+
+                    <!-- Answer Key - Bottom Left -->
+                    <div class="document-card document-paper">
+                        <div class="document-preview" aria-hidden="true">
+                            <!-- Paper mockup placeholder -->
+                        </div>
+                        <div class="document-info">
+                            <h3 class="document-name">Answer Key</h3>
+                            <p class="document-desc">Quick reference answers for checking work</p>
+                        </div>
+                    </div>
+
+                    <!-- Worked Solutions - Bottom Right -->
+                    <div class="document-card document-paper">
+                        <div class="document-preview" aria-hidden="true">
+                            <!-- Paper mockup placeholder -->
+                        </div>
+                        <div class="document-info">
+                            <h3 class="document-name">Worked Solutions</h3>
+                            <p class="document-desc">Step-by-step explanations for every question</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Topic Gap Insight Callout -->
+                <div class="proof-insight">
+                    <span class="insight-text">The gap most parents miss: specific topics like "Calculus - Derivatives", not just "needs improvement"</span>
+                </div>
+            </div>
+        </section>
+
         <!-- About Section -->
         <section class="about" id="about" aria-labelledby="about-title">
             <div class="container">
