--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,94 @@
             color: var(--gray-500);
         }
 
+        /* Proof Section */
+        .proof-section {
+            padding: 100px 0;
+            background: var(--purple-50);
+        }
+
+        .proof-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: var(--purple-100);
+            color: var(--purple-700);
+            padding: 10px 24px;
+            border-radius: 100px;
+            font-family: var(--font-display);
+            font-size: 0.9rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+            border: 1px solid var(--purple-200);
+        }
+
+        /* Documents Grid - 2x2 on desktop, 1 column on mobile */
+        .documents-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 24px;
+            max-width: 900px;
+            margin: 0 auto;
+        }
+
+        /* Document Card Base */
+        .document-card {
+            background: white;
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
+            border: 1px solid var(--gray-100);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .document-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1);
+            border-color: var(--purple-200);
+        }
+
+        .document-preview {
+            height: 200px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .document-info {
+            padding: 20px 24px;
+        }
+
+        .document-name {
+            font-family: var(--font-display);
+            font-size: 1.15rem;
+            font-weight: 600;
+            color: var(--gray-900);
+            margin-bottom: 8px;
+        }
+
+        .document-desc {
+            font-size: 0.9rem;
+            color: var(--gray-500);
+            line-height: 1.5;
+            margin: 0;
+        }
+
+        /* Topic Gap Insight Callout */
+        .proof-insight {
+            max-width: 600px;
+            margin: 40px auto 0;
+            text-align: center;
+            padding: 16px 24px;
+            background: white;
+            border-radius: 12px;
+            border: 1px solid var(--purple-200);
+        }
+
+        .insight-text {
+            font-size: 0.95rem;
+            color: var(--gray-600);
+            font-style: italic;
+        }
+
         /* About */
         .about { background: var(--gray-50); }
 
@@ -3381,6 +3469,30 @@
 
             .weak-tag {
                 font-size: 0.75rem;
+            }
+
+            /* Proof Section Mobile */
+            .proof-section {
+                padding: 60px 0;
+            }
+
+            .documents-grid {
+                grid-template-columns: 1fr;
+                gap: 16px;
+            }
+
+            .document-preview {
+                height: 160px;
+            }
+
+            .proof-badge {
+                font-size: 0.8rem;
+                padding: 8px 16px;
+            }
+
+            .proof-insight {
+                margin-top: 24px;
+                padding: 12px 16px;
             }
         }
 
