feat(08-01): add comparison section HTML structure
- Add comparison section between Proof and About sections
- Include two-column table for desktop (5 contrast rows)
- Include 5 stacked cards for mobile view
- Semantic HTML with aria-labelledby for accessibility
- Contrasts: feedback, materials, tracking, support, trial

--- a/index.html
+++ b/index.html
@@ -5146,6 +5146,79 @@
             </div>
         </section>
 
+        <!-- Comparison Section -->
+        <section class="comparison-section" id="comparison" aria-labelledby="comparison-title">
+            <div class="container">
+                <header class="section-header">
+                    <h2 class="section-title" id="comparison-title">Not All Tutoring is the Same</h2>
+                    <p class="section-description">See why specific beats generic</p>
+                </header>
+
+                <!-- Desktop Table (hidden on mobile) -->
+                <div class="comparison-table-wrapper">
+                    <table class="comparison-table" role="presentation">
+                        <thead>
+                            <tr>
+                                <th class="comparison-header comparison-header-generic">What You Hear</th>
+                                <th class="comparison-header comparison-header-beam">What BEAM Shows You</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="comparison-row">
+                                <td class="comparison-cell comparison-generic">"Your child is doing fine"</td>
+                                <td class="comparison-cell comparison-beam"><strong>78% overall</strong> - priority: trigonometry word problems</td>
+                            </tr>
+                            <tr class="comparison-row">
+                                <td class="comparison-cell comparison-generic">Same worksheets for everyone</td>
+                                <td class="comparison-cell comparison-beam">Custom worksheets targeting <strong>YOUR</strong> child's gaps</td>
+                            </tr>
+                            <tr class="comparison-row">
+                                <td class="comparison-cell comparison-generic">"We'll work on weak areas"</td>
+                                <td class="comparison-cell comparison-beam">Dashboard showing <strong>exactly</strong> which topics need work</td>
+                            </tr>
+                            <tr class="comparison-row">
+                                <td class="comparison-cell comparison-generic">Wait until next lesson for help</td>
+                                <td class="comparison-cell comparison-beam">Discord support - stuck at 9pm, <strong>help by 10am</strong></td>
+                            </tr>
+                            <tr class="comparison-row">
+                                <td class="comparison-cell comparison-generic">One free lesson to try</td>
+                                <td class="comparison-cell comparison-beam"><strong>4 personalized PDFs</strong> + portal access (yours to keep)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Mobile Cards (hidden on desktop) -->
+                <div class="comparison-cards">
+                    <div class="comparison-card">
+                        <div class="comparison-card-label">Feedback</div>
+                        <div class="comparison-card-generic">"Your child is doing fine"</div>
+                        <div class="comparison-card-beam"><strong>78% overall</strong> - priority: trigonometry word problems</div>
+                    </div>
+                    <div class="comparison-card">
+                        <div class="comparison-card-label">Materials</div>
+                        <div class="comparison-card-generic">Same worksheets for everyone</div>
+                        <div class="comparison-card-beam">Custom worksheets targeting <strong>YOUR</strong> child's gaps</div>
+                    </div>
+                    <div class="comparison-card">
+                        <div class="comparison-card-label">Progress Tracking</div>
+                        <div class="comparison-card-generic">"We'll work on weak areas"</div>
+                        <div class="comparison-card-beam">Dashboard showing <strong>exactly</strong> which topics need work</div>
+                    </div>
+                    <div class="comparison-card">
+                        <div class="comparison-card-label">Support</div>
+                        <div class="comparison-card-generic">Wait until next lesson for help</div>
+                        <div class="comparison-card-beam">Discord support - stuck at 9pm, <strong>help by 10am</strong></div>
+                    </div>
+                    <div class="comparison-card">
+                        <div class="comparison-card-label">Free Trial</div>
+                        <div class="comparison-card-generic">One free lesson to try</div>
+                        <div class="comparison-card-beam"><strong>4 personalized PDFs</strong> + portal access (yours to keep)</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- About Section -->
         <section class="about" id="about" aria-labelledby="about-title">
             <div class="container">
