fix(08-01): update topics to harder math (integration) and teachers framing

--- a/index.html
+++ b/index.html
@@ -5279,7 +5279,7 @@
 
                 <!-- Topic Gap Insight Callout -->
                 <div class="proof-insight">
-                    <span class="insight-text">The gap most parents miss: specific topics like "Calculus - Derivatives", not just "needs improvement"</span>
+                    <span class="insight-text">The gap teachers miss: specific topics like "Integration by Parts", not just "needs improvement"</span>
                 </div>
             </div>
         </section>
@@ -5304,7 +5304,7 @@
                         <tbody>
                             <tr class="comparison-row">
                                 <td class="comparison-cell comparison-generic">"Your child is doing fine"</td>
-                                <td class="comparison-cell comparison-beam"><strong>78% overall</strong> - priority: trigonometry word problems</td>
+                                <td class="comparison-cell comparison-beam"><strong>78% overall</strong> - priority: integration by substitution</td>
                             </tr>
                             <tr class="comparison-row">
                                 <td class="comparison-cell comparison-generic">Same worksheets for everyone</td>
@@ -5331,7 +5331,7 @@
                     <div class="comparison-card">
                         <div class="comparison-card-label">Feedback</div>
                         <div class="comparison-card-generic">"Your child is doing fine"</div>
-                        <div class="comparison-card-beam"><strong>78% overall</strong> - priority: trigonometry word problems</div>
+                        <div class="comparison-card-beam"><strong>78% overall</strong> - priority: integration by substitution</div>
                     </div>
                     <div class="comparison-card">
                         <div class="comparison-card-label">Materials</div>
